--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
-theme: jekyll-theme-minimal
-
+theme: minima
+minima:
+  skin: classic
+  social_links:
+    twitter: rksiitd
+    github: rksiitd1
+    linkedin: rksiitd
